--- a/coding/pug/components/header.pug
+++ b/coding/pug/components/header.pug
@@ -9,7 +9,7 @@ header.header
         .header__mobile-nav-wrapper
           ul.header__mobile-nav-list
             li.header__mobile-nav-item
-              a(href="mypage") Home
+              a(href="mypage.html") Home
             li.header__mobile-nav-item
               a(href="office.html") Office
             li.header__mobile-nav-item
@@ -23,7 +23,7 @@ header.header
               a(href="login.html") Login
             li.header__mobile-nav-item
               i.icon-cart
-              a(href="#") Cart
+              a(href="cart.html") Cart
           .header__mobile-cta
             button.button.w-full(class="mb-[10px]") Give a gift
             button.button.button--secondary.w-full Get Started
@@ -54,5 +54,5 @@ header.header
                 a(href="login.html") Login
                   i.icon-user.icon-user--desktop
               .header__center
-                a(href="#") Cart
+                a(href="cart.html") Cart
                   i.icon-cart.icon-cart--desktop
