--- a/coding/scss/app.scss
+++ b/coding/scss/app.scss
@@ -17,3 +17,5 @@
 @import './components/order';
 @import './components/join';
 @import './components/office';
+@import './components/breadcrumbs';
+@import './components/cart';
