--- a/coding/css/style.css
+++ b/coding/css/style.css
@@ -575,6 +575,10 @@ video {
   margin-right: 41px !important;
 }
 
+.mt-\[29px\] {
+  margin-top: 29px !important;
+}
+
 .mt-\[30px\] {
   margin-top: 30px !important;
 }
@@ -794,7 +798,9 @@ footer {
 .order,
 .join,
 .office,
-.office__banner-wrapper {
+.office__banner-wrapper,
+.breadcrumbs,
+.cart {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
@@ -810,7 +816,9 @@ footer {
 .order,
 .join,
 .office,
-.office__banner-wrapper {
+.office__banner-wrapper,
+.breadcrumbs,
+.cart {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
@@ -1086,7 +1094,9 @@ footer {
 .header__mobile-nav-item {
   position: relative;
   margin-bottom: 1rem;
+  display: flex;
   height: 2.5rem;
+  align-items: baseline;
   border-bottom-width: 1px;
   border-style: solid;
   border-color: #0000001a;
@@ -1098,6 +1108,8 @@ footer {
 }
 
 .header__mobile-nav-item a {
+  display: inline-block;
+  width: 100%;
   font-family: Fredoka, sans-serif;
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -2959,9 +2971,252 @@ footer {
   padding-right: 2.25rem;
 }
 
+.breadcrumbs {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 187 194 / var(--tw-bg-opacity));
+  padding-top: 25px;
+  padding-bottom: 25px;
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.breadcrumbs h2 {
+  margin-bottom: 5px;
+  font-family: Fredoka, sans-serif;
+  font-size: 26px;
+  font-weight: 600;
+}
+
+.breadcrumbs__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.breadcrumbs__item {
+  position: relative;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.breadcrumbs__item::before {
+  position: absolute;
+  left: -3px;
+  content: "/";
+}
+
+.breadcrumbs__item:first-of-type::before {
+  content: "";
+}
+
+.cart {
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
 @media (min-width: 767px) {
+  .cart {
+    padding-top: 50px;
+    padding-bottom: 168px;
+  }
+
+  .cart__wrapper {
+    display: flex;
+  }
+
+  .cart__list {
+    margin-right: 30px;
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.cart__list .cart__card-wrapper:first-of-type {
+  margin-bottom: 30px;
+  justify-content: center;
+}
+
+.cart__card-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart__card {
+  margin-bottom: 1.25rem;
+  border-radius: 10px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 244 244 / var(--tw-bg-opacity));
+  padding: 14px;
+}
+
+@media (min-width: 375px) {
+  .cart__card {
+    padding: 1.25rem;
+  }
+}
+
+@media (min-width: 1023px) {
+  .cart__card {
+    margin-bottom: 0px;
+    margin-right: 30px;
+    margin-top: 0.5rem;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .cart__card:first-of-type {
+    margin-top: 0px;
+  }
+}
+
+.cart__card--order {
+  margin-bottom: 0px;
+  font-weight: 500;
+}
+
+@media (min-width: 767px) {
+  .cart__card--order {
+    margin-right: 0px;
+    margin-top: 0px;
+    display: block;
+    width: 47.1%;
+  }
+}
+
+.cart__card--order h3 {
+  margin-bottom: 25px;
+}
+
+.cart__card--order .cart__card-wrapper:nth-of-type(3) {
+  padding-top: 6px;
+  padding-bottom: 15px;
+}
+
+.cart__card--order .cart__card-wrapper:last-of-type {
+  margin-bottom: 34px;
+  border-top-width: 1px;
+  border-style: dashed;
+  padding-top: 1rem;
+  border-color: rgba(0, 0, 0, 0.1);
+}
+
+.cart__img-wrapper {
+  margin-right: 15px;
+}
+
+@media (min-width: 767px) {
+  .cart__img-wrapper {
+    margin-right: 1.25rem;
+  }
+}
+
+.cart__img-wrapper img {
+  max-width: 100px;
+}
+
+@media (min-width: 375px) {
+  .cart__img-wrapper img {
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 767px) {
+  .cart__img-wrapper img {
+    max-width: 131px;
+  }
+}
+
+.cart__text h3 {
+  font-family: Fredoka, sans-serif;
+  font-size: 26px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(45 67 87 / var(--tw-text-opacity));
+}
+
+@media (min-width: 767px) {
+  .cart__text h3 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+.cart__text-h4 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 500;
+}
+
+@media (min-width: 375px) {
+  .cart__text-h4 {
+    margin-top: 4px;
+    margin-bottom: 4px;
+  }
+}
+
+@media (min-width: 767px) {
+  .cart__text-h4 {
+    margin-bottom: 11px;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    line-height: 1;
+  }
+}
+
+.cart__text-second {
+  font-family: Fredoka, sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(0 187 194 / var(--tw-text-opacity));
+}
+
+@media (min-width: 767px) {
+  .cart__text-second {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+.cart__price {
+  font-family: Fredoka, sans-serif;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1;
+}
+
+@media (min-width: 767px) {
+  .cart__price {
+    padding-left: 1rem;
+    padding-right: 70px;
+  }
+}
+
+.cart__icon-trash {
+  display: block;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  background-image: url("../images/remove.png");
+}
+
+@media (min-width: 767px) {
+  .tablet\:mt-0 {
+    margin-top: 0px !important;
+  }
+
   .tablet\:flex {
     display: flex !important;
+  }
+
+  .tablet\:items-center {
+    align-items: center !important;
   }
 }
 
