--- a/coding/scss/components/banner.scss
+++ b/coding/scss/components/banner.scss
@@ -7,7 +7,7 @@
 }
 
 .banner__hero {
-  @apply hidden h-full object-cover tablet:block;
+  @apply hidden h-full object-cover tablet:block tablet:mx-auto;
 }
 
 .banner__mobile {
