--- a/coding/css/style.css
+++ b/coding/css/style.css
@@ -1690,6 +1690,8 @@ footer {
 
 @media (min-width: 767px) {
   .banner__hero {
+    margin-left: auto;
+    margin-right: auto;
     display: block;
   }
 }
