--- a/coding/pug/layout.pug
+++ b/coding/pug/layout.pug
@@ -25,4 +25,5 @@ html(lang="en")
   script(src="../js/index.js")
   script(src="../js/carousel-list.js")
   script(src="../js/carousel.js")
-  script(src="../js/css3-animate-it.js") 
+  script(src="../js/css3-animate-it.js")
+  script(src="../js/accordion.js")
