--- a/coding/scss/elements/elements.scss
+++ b/coding/scss/elements/elements.scss
@@ -30,6 +30,10 @@ footer {
   @apply tablet:max-w-[1170px] tablet:mx-auto;
 }
 
+.main-wrapper--faq {
+  @apply tablet:max-w-[770px];
+}
+
 .main-wrapper--order {
   @apply tablet:max-w-[970px];
 }
