--- a/coding/html/components/header.html
+++ b/coding/html/components/header.html
@@ -13,7 +13,7 @@
             <li class="header__mobile-nav-item"><a href="office.html">Office</a></li>
             <li class="header__mobile-nav-item"><a href="#">Past Boxes</a></li>
             <li class="header__mobile-nav-item"><a href="#">Shop</a></li>
-            <li class="header__mobile-nav-item uppercase"><a href="#">Faq</a></li>
+            <li class="header__mobile-nav-item uppercase"><a href="faq.html">Faq</a></li>
             <li class="header__mobile-nav-item"><i class="icon-user"></i><a href="login.html">Login</a></li>
             <li class="header__mobile-nav-item"><i class="icon-cart"></i><a href="cart.html">Cart</a></li>
           </ul>
@@ -33,7 +33,7 @@
             <ul class="nav__list">
               <li class="nav__item"><a href="office.html">Office</a></li>
               <li class="nav__item"><a href="#">Past Boxes</a></li>
-              <li class="nav__item"><a href="#">FAQ</a></li>
+              <li class="nav__item"><a href="faq.html">FAQ</a></li>
             </ul>
           </nav>
         </div>
