--- a/coding/pug/components/header.pug
+++ b/coding/pug/components/header.pug
@@ -17,7 +17,7 @@ header.header
             li.header__mobile-nav-item
               a(href="#") Shop
             li.header__mobile-nav-item.uppercase
-              a(href="#") Faq
+              a(href="faq.html") Faq
             li.header__mobile-nav-item
               i.icon-user
               a(href="login.html") Login
@@ -44,7 +44,7 @@ header.header
               li.nav__item
                 a(href="#") Past Boxes
               li.nav__item
-                a(href="#") FAQ
+                a(href="faq.html") FAQ
         .header__inside
             .header__inside
               button.button.button--40.mr-5 Give a gift
