--- a/coding/css/style.css
+++ b/coding/css/style.css
@@ -628,6 +628,11 @@ video {
   line-height: 2.25rem !important;
 }
 
+.text-xs {
+  font-size: 0.75rem !important;
+  line-height: 1rem !important;
+}
+
 .font-bold {
   font-weight: 700 !important;
 }
@@ -800,7 +805,8 @@ footer {
 .office,
 .office__banner-wrapper,
 .breadcrumbs,
-.cart {
+.cart,
+.product {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
@@ -818,7 +824,8 @@ footer {
 .office,
 .office__banner-wrapper,
 .breadcrumbs,
-.cart {
+.cart,
+.product {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
@@ -3210,6 +3217,85 @@ footer {
   width: 30px;
   cursor: pointer;
   background-image: url("../images/remove.png");
+}
+
+.product {
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
+.product__list {
+  display: grid;
+  gap: 1.25rem;
+}
+
+@media (min-width: 680px) {
+  .product__list {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 828px) {
+  .product__list {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1023px) {
+  .product__list {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 30px;
+  }
+}
+
+.product__highlight {
+  margin-bottom: 2.25rem;
+  font-family: Montserrat, sans-serif;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(0 187 194 / var(--tw-text-opacity));
+}
+
+.product__item {
+  border-radius: 15px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 244 244 / var(--tw-bg-opacity));
+  padding: 30px;
+}
+
+.product__item:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 99 44 / var(--tw-bg-opacity));
+}
+
+.product__item:hover .product__highlight, .product__item:hover .product__header h3, .product__item:hover .product__header p {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.product__card img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product__header {
+  margin-top: 39px;
+  text-align: center;
+}
+
+.product__header h3 {
+  margin-bottom: 4px;
+  font-family: Fredoka, sans-serif;
+  font-size: 26px;
+  font-weight: 600;
+}
+
+.product__header p {
+  font-family: Montserrat, sans-serif;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  color: #000000a8;
 }
 
 @media (min-width: 767px) {
