--- a/coding/css/input.css
+++ b/coding/css/input.css
@@ -72,7 +72,8 @@ footer {
 .office__banner-wrapper,
 .breadcrumbs,
 .cart,
-.product {
+.product,
+.product-view {
   @apply px-3 sp:px-6;
 }
 
@@ -1118,6 +1119,70 @@ footer {
 }
 .product__header p {
   @apply font-text text-xl text-text-dark-60;
+}
+
+.product-view__wrapper {
+  @apply pt-[30px] pb-[39px] tablet:grid tablet:grid-cols-2 tablet:gap-x-[31px] tablet:pt-[60px] tablet:pb-[100px];
+}
+.product-view__display {
+  @apply bg-product-bg rounded-[15px] flex items-center justify-center tablet:h-[135px] hover:bg-secondary cursor-pointer;
+}
+.product-view__display img {
+  @apply scale-[0.6] tablet:scale-50;
+}
+.product-view__display--full {
+  @apply h-[328px] tablet:h-[570px] hover:bg-product-bg cursor-default;
+}
+.product-view__display--full img {
+  @apply tablet:transform-none;
+}
+.product-view__list {
+  @apply hidden tablet:grid tablet:grid-cols-4 tablet:gap-x-[10px] mt-[10px];
+}
+.product-view__header {
+  @apply mt-5 tablet:mt-[41px] tablet:mb-[39px];
+}
+.product-view__header h3 {
+  @apply font-header font-medium text-3xl text-text-dark mb-2 tablet:mb-3 tablet:text-4xl;
+}
+.product-view__header p {
+  @apply font-text font-medium text-sm text-text-dark tablet:text-2xl;
+}
+.product-view__caution-card {
+  @apply flex mt-[26px];
+}
+.product-view__caution-card:nth-of-type(2) {
+  @apply mt-4;
+}
+.product-view__card-details h4 {
+  @apply font-header font-medium text-xl text-text-dark mb-[3px];
+}
+.product-view__card-details p {
+  @apply text-text-dark-60 font-text font-normal text-base;
+}
+.product-view__icon {
+  @apply w-[42px] h-[42px] mr-5;
+}
+.product-view__cta {
+  @apply grid grid-cols-2 gap-x-5 tablet:gap-x-[30px];
+}
+.product-view__cta button {
+  @apply tablet:w-full;
+}
+.product-view__description {
+  @apply mt-4 mb-5 tablet:mt-[34px] tablet:mb-[30px];
+}
+.product-view__description h4 {
+  @apply font-header font-medium text-xl text-text-dark mb-[9px];
+}
+.product-view__description p {
+  @apply text-text-dark-60 font-normal font-text text-base;
+}
+.product-view__mobile {
+  @apply tablet:hidden;
+}
+.product-view__desktop {
+  @apply hidden tablet:grid;
 }
 
 /*# sourceMappingURL=input.css.map */
