--- a/coding/css/style.css
+++ b/coding/css/style.css
@@ -575,6 +575,10 @@ video {
   margin-right: 41px !important;
 }
 
+.mt-5 {
+  margin-top: 1.25rem !important;
+}
+
 .mt-\[29px\] {
   margin-top: 29px !important;
 }
@@ -806,7 +810,8 @@ footer {
 .office__banner-wrapper,
 .breadcrumbs,
 .cart,
-.product {
+.product,
+.product-view {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
@@ -825,7 +830,8 @@ footer {
 .office__banner-wrapper,
 .breadcrumbs,
 .cart,
-.product {
+.product,
+.product-view {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
@@ -3296,6 +3302,233 @@ footer {
   font-size: 1.25rem;
   line-height: 1.75rem;
   color: #000000a8;
+}
+
+.product-view__wrapper {
+  padding-top: 30px;
+  padding-bottom: 39px;
+}
+
+@media (min-width: 767px) {
+  .product-view__wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    -moz-column-gap: 31px;
+         column-gap: 31px;
+    padding-top: 60px;
+    padding-bottom: 100px;
+  }
+}
+
+.product-view__display {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 244 244 / var(--tw-bg-opacity));
+}
+
+.product-view__display:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 99 44 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 767px) {
+  .product-view__display {
+    height: 135px;
+  }
+}
+
+.product-view__display img {
+  --tw-scale-x: 0.6;
+  --tw-scale-y: 0.6;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@media (min-width: 767px) {
+  .product-view__display img {
+    --tw-scale-x: .5;
+    --tw-scale-y: .5;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+}
+
+.product-view__display--full {
+  height: 328px;
+  cursor: default;
+}
+
+.product-view__display--full:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 244 244 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 767px) {
+  .product-view__display--full {
+    height: 570px;
+  }
+
+  .product-view__display--full img {
+    transform: none;
+  }
+}
+
+.product-view__list {
+  margin-top: 10px;
+  display: none;
+}
+
+@media (min-width: 767px) {
+  .product-view__list {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+  }
+}
+
+.product-view__header {
+  margin-top: 1.25rem;
+}
+
+@media (min-width: 767px) {
+  .product-view__header {
+    margin-top: 41px;
+    margin-bottom: 39px;
+  }
+}
+
+.product-view__header h3 {
+  margin-bottom: 0.5rem;
+  font-family: Fredoka, sans-serif;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+@media (min-width: 767px) {
+  .product-view__header h3 {
+    margin-bottom: 0.75rem;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+.product-view__header p {
+  font-family: Montserrat, sans-serif;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+@media (min-width: 767px) {
+  .product-view__header p {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+.product-view__caution-card {
+  margin-top: 26px;
+  display: flex;
+}
+
+.product-view__caution-card:nth-of-type(2) {
+  margin-top: 1rem;
+}
+
+.product-view__card-details h4 {
+  margin-bottom: 3px;
+  font-family: Fredoka, sans-serif;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.product-view__card-details p {
+  font-family: Montserrat, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  color: #000000a8;
+}
+
+.product-view__icon {
+  margin-right: 1.25rem;
+  height: 42px;
+  width: 42px;
+}
+
+.product-view__cta {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+@media (min-width: 767px) {
+  .product-view__cta {
+    -moz-column-gap: 30px;
+         column-gap: 30px;
+  }
+
+  .product-view__cta button {
+    width: 100%;
+  }
+}
+
+.product-view__description {
+  margin-top: 1rem;
+  margin-bottom: 1.25rem;
+}
+
+@media (min-width: 767px) {
+  .product-view__description {
+    margin-top: 34px;
+    margin-bottom: 30px;
+  }
+}
+
+.product-view__description h4 {
+  margin-bottom: 9px;
+  font-family: Fredoka, sans-serif;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.product-view__description p {
+  font-family: Montserrat, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  color: #000000a8;
+}
+
+@media (min-width: 767px) {
+  .product-view__mobile {
+    display: none;
+  }
+}
+
+.product-view__desktop {
+  display: none;
+}
+
+@media (min-width: 767px) {
+  .product-view__desktop {
+    display: grid;
+  }
 }
 
 @media (min-width: 767px) {
