--- a/coding/scss/app.scss
+++ b/coding/scss/app.scss
@@ -20,3 +20,4 @@
 @import './components/breadcrumbs';
 @import './components/cart';
 @import './components/product';
+@import './components/product-view';
