--- a/coding/pug/components/header.pug
+++ b/coding/pug/components/header.pug
@@ -25,9 +25,11 @@ header.header
               i.icon-cart
               a(href="cart.html") Cart
           .header__mobile-cta
-            button.button.w-full(class="mb-[10px]") Give a gift
-            button.button.button--secondary.w-full Get Started
-      a(href="#")
+            a(href="gift.html")
+              button.button.w-full(class="mb-[10px]") Give a gift
+            a(href="plan.html")
+              button.button.button--secondary.w-full Get Started
+      a(href="mypage.html")
         img.header__mobile-logo(src="../images/logo.png", alt="Treats logo")
       a(href="#")
         img.header__mobile-user(src="../images/user.png", alt="User profile") 
@@ -47,8 +49,10 @@ header.header
                 a(href="#") FAQ
         .header__inside
             .header__inside
-              button.button.button--40.mr-5 Give a gift
-              button.button.button--secondary.button--40(class="mr-[41px]") Get Started
+              a(href="gift.html")
+                button.button.button--40.mr-5 Give a gift
+              a(href="plan.html")
+                button.button.button--secondary.button--40(class="mr-[41px]") Get Started
             .header__inside
               .header__center
                 a(href="login.html") Login
