--- a/coding/css/style.css
+++ b/coding/css/style.css
@@ -724,6 +724,10 @@ footer {
   .main-wrapper--order {
     max-width: 970px;
   }
+
+  .main-wrapper--gift {
+    max-width: 770px;
+  }
 }
 
 .button {
@@ -811,7 +815,8 @@ footer {
 .breadcrumbs,
 .cart,
 .product,
-.product-view {
+.product-view,
+.gift {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
@@ -831,7 +836,8 @@ footer {
 .breadcrumbs,
 .cart,
 .product,
-.product-view {
+.product-view,
+.gift {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
@@ -2207,6 +2213,16 @@ footer {
   }
 }
 
+.testimony-social--component {
+  padding-bottom: 0px;
+}
+
+@media (min-width: 767px) {
+  .testimony-social--component {
+    padding-bottom: 0px;
+  }
+}
+
 .testimony-social__list {
   margin-bottom: 30px;
   display: none;
@@ -3000,11 +3016,67 @@ footer {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media (min-width: 767px) {
+  .breadcrumbs {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
 .breadcrumbs h2 {
   margin-bottom: 5px;
   font-family: Fredoka, sans-serif;
   font-size: 26px;
   font-weight: 600;
+  line-height: 1.5;
+}
+
+@media (min-width: 767px) {
+  .breadcrumbs h2 {
+    font-size: 46px;
+  }
+}
+
+.breadcrumbs--w-img {
+  position: relative;
+  display: flex;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+@media (min-width: 767px) {
+  .breadcrumbs--w-img {
+    height: 200px;
+  }
+}
+
+.breadcrumbs--w-img img {
+  position: relative;
+  top: 13px;
+  margin-right: 9px;
+  height: 117px;
+}
+
+@media (min-width: 767px) {
+  .breadcrumbs--w-img img {
+    top: 26px;
+    margin-right: 28px;
+    height: 222px;
+  }
+}
+
+.breadcrumbs--w-img h2 {
+  margin-bottom: 0px;
+  font-size: 26px;
+  line-height: 1;
+}
+
+@media (min-width: 767px) {
+  .breadcrumbs--w-img h2 {
+    font-size: 56px;
+  }
 }
 
 .breadcrumbs__list {
@@ -3017,6 +3089,13 @@ footer {
   position: relative;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+@media (min-width: 767px) {
+  .breadcrumbs__item {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
 }
 
 .breadcrumbs__item::before {
@@ -3529,6 +3608,190 @@ footer {
   .product-view__desktop {
     display: grid;
   }
+}
+
+.gift {
+  padding-top: 42px;
+  padding-bottom: 50px;
+}
+
+@media (min-width: 767px) {
+  .gift {
+    padding-bottom: 100px;
+    padding-top: 91px;
+  }
+}
+
+.gift__wrapper h2 {
+  margin-bottom: 23px;
+  text-align: center;
+  font-family: Fredoka, sans-serif;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(220 53 69 / var(--tw-text-opacity));
+}
+
+@media (min-width: 767px) {
+  .gift__wrapper h2 {
+    margin-bottom: 41px;
+  }
+}
+
+.gift__best-value {
+  right: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 33px;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 20px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 53 69 / var(--tw-bg-opacity));
+  padding-left: 9px;
+  padding-right: 9px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-family: Fredoka, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 767px) {
+  .gift__best-value {
+    position: absolute;
+    top: 30px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+  }
+}
+
+.gift__item {
+  position: relative;
+  margin-bottom: 1.25rem;
+  border-radius: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #0000001a;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+@media (min-width: 767px) {
+  .gift__item {
+    margin-bottom: 30px;
+    border-radius: 20px;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-top: 45px;
+    padding-bottom: 45px;
+  }
+}
+
+.gift__item:last-of-type {
+  margin-bottom: 0px;
+  border-width: 3px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 187 194 / var(--tw-border-opacity));
+}
+
+.gift__item:last-of-type .gift__img img {
+  position: relative;
+  left: 10px;
+}
+
+@media (min-width: 767px) {
+  .gift__item-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    align-items: center;
+  }
+}
+
+.gift__list {
+  margin-top: 1rem;
+  margin-bottom: 27px;
+}
+
+.gift__img img {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.gift__header {
+  padding-top: 14px;
+  text-align: center;
+}
+
+@media (min-width: 767px) {
+  .gift__header {
+    padding-top: 0px;
+    text-align: left;
+  }
+}
+
+.gift__header h3 {
+  margin-bottom: 6px;
+  font-family: Fredoka, sans-serif;
+  font-size: 26px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(45 67 87 / var(--tw-text-opacity));
+}
+
+@media (min-width: 767px) {
+  .gift__header h3 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+.gift__header p {
+  font-family: Montserrat, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+@media (min-width: 767px) {
+  .gift__header p {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+.gift__row {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.gift__row:last-of-type {
+  margin-bottom: 0px;
+}
+
+.gift__row img {
+  margin-right: 1.25rem;
+  height: 42px;
+  width: 42px;
+}
+
+.gift__row p {
+  font-family: Montserrat, sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 1;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 @media (min-width: 767px) {
